# base

./: .gitignore  README.md  architecture-flow.md  master-document.md  roadmap.md
ai-pipeline/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  preview-register.html  pyproject.toml
ai-pipeline/.github/workflows/: ci.yml
ai-pipeline/apps/dashboard/: app.py
ai-pipeline/apps/server/: main.py  pipeline.py
ai-pipeline/data/: weight_convergence.json
ai-pipeline/docs/: mcp-integration.md  phase6-progress.md
ai-pipeline/hooks/: common.py  on_prompt.py  on_stop.py  post_tool_write.py  pre_tool_bash.py  pre_tool_write.py
ai-pipeline/scripts/: audit_skills.py  evaluate_skills.py  fix_token_estimates.py  generate_skill.py  init_project.py  sync_obsidian.py  verify_docker.py  version_skill.py
ai-pipeline/skills/analytics/: ab-testing.yaml  attribution-model.yaml  bayesian.yaml  behavioral-analytics.yaml  churn-prediction.yaml  cohort-analysis.yaml  data-governance.yaml  data-pipeline.yaml  data-quality.yaml  data-storytelling.yaml  data-visualization.yaml  dora-metrics.yaml  event-tracking.yaml  experiment-design.yaml  funnel-analysis.yaml  kpi-framework.yaml  ltv-calculation.yaml  metric-tree.yaml  metrics.yaml  north-star-metric.yaml  (+10 more)
ai-pipeline/tests/: benchmark.py  test_auto_ingest.py  test_dashboard_api.py  test_evolution_api.py  test_graph_rag.py  test_hook_engine.py  test_phase11_features.py  test_phase13_features.py  test_phase14_features.py  test_pipeline_e2e.py  test_post_validator.py  test_skill_store.py  test_watcher.py
(+1307 files in other folders)
