[project]
name = "ai-pipeline"
version = "0.1.0"
description = "AI Fullstack Pipeline — Atomic Skill + External Hook Engine"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    # Graph RAG
    "neo4j>=5.0",
    "qdrant-client>=1.7.0",
    "openai>=1.0",
    # File watcher
    "watchdog>=4.0.0",
    # Session store
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]
dashboard = [
    "streamlit>=1.35.0",
    "plotly>=5.0.0",
    "requests>=2.31.0",
]
metrics = [
    "prometheus_client>=0.20.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
